<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_show_profile" />
        <item
            android:id="@+id/nav_trip_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_trip_list" />
        <item
            android:id="@+id/nav_bought_trips"
            android:icon="@drawable/ic_price"
            android:title="Bought Trips" />

        <item
            android:id="@+id/nav_others_trip_list"
            android:icon="@drawable/ic_baseline_car"
            android:title="@string/menu_others_trips" />
    </group>

</menu>