<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:elevation="8dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Carpooling.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlwaysCollapsed|scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="10"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_search_departure"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/departure"
                    app:endIconMode="clear_text"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/outlined_box_search"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/textInput_search_arrival"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search_departure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_search_arrival"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:hint="@string/arrival"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/outlined_box_search"
                    app:endIconMode="clear_text"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textInput_search_departure"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search_arrival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/range_slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:stepSize="10.0"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:layout_constraintEnd_toEndOf="@+id/textInput_search_departure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_search_date"
                    app:thumbColor="?attr/colorSecondaryVariant"
                    app:trackColorActive="?attr/colorSecondaryVariant"
                    app:trackColorInactive="@color/material_on_primary_disabled" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass"
                    android:text="Price"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_price_slider"
                    app:layout_constraintEnd_toStartOf="@+id/tv_price_slider"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/range_slider"
                    app:layout_constraintStart_toStartOf="@+id/textInput_search_arrival"
                    app:layout_constraintTop_toTopOf="@+id/tv_price_slider" />

                <TextView
                    android:id="@+id/tv_price_slider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/overpass"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/range_slider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_price"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_search_date" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_search_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/date"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/outlined_box_search"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/textInput_search_time"
                    app:layout_constraintEnd_toStartOf="@+id/textInput_search_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_search_departure"
                    app:startIconDrawable="@drawable/ic_calendar"
                    app:startIconTint="?attr/colorOnPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_search_time"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:hint="@string/time"
                    android:textColorHint="?attr/colorOnPrimary"
                    app:boxStrokeColor="@color/outlined_box_search"
                    app:hintTextColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textInput_search_date"
                    app:layout_constraintTop_toTopOf="@id/textInput_search_date"
                    app:startIconDrawable="@drawable/ic_time"
                    app:startIconTint="?attr/colorOnPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />


                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:theme="@style/MyToolbarTheme"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>